# swarm-composition-artifact

./: .gitmodules  1_test_pv.sh  2_test_pv.sh  Dockerfile  Justfile  README.md  build.sh  check_error_code.sh  clean_build.sh  kick-the-tires  monitor_progress.sh  one_command_run_with_volume.sh  prepare_artifact.sh  remove_dist_node_modules_ax.sh  run-benchmarks  run-benchmarks-short  run.ps1  run.sh  run_shell.ps1  run_shell.sh  run_shell_no_volume.ps1  run_shell_no_volume.sh  run_shell_with_volume.sh  some_commands.txt  supervisord.conf  test_files.sh  test_pv.sh  things.txt  warehouse-demo  warehouse-factory-demo  warehouse-factory-quality-demo.sh
artifact_description/: .gitignore  abstract.tex  appendix.tex  artifact-description.tex  content.tex  (+3 more)
machine-check/: .gitignore  Cargo.toml  package-lock.json  package.json  tsconfig.json
machine-check/benches/: composition_benchmark_full.rs  composition_benchmark_short.rs
machine-check/examples/cjs/composition/: .gitignore
machine-check/examples/esm/: swarm-not-wellformed.test.ts
machine-check/examples/esm/composition/: car-factory-protos.ts  check-composed-projection.test.ts  composition-comparison.test.ts  swarm-not-weakwellformed-carfactory.test.ts  swarm-weakwellformed-carfactory.test.ts
machine-check/examples/esm/composition/car_factory_2/: car-factory-2.test.ts
machine-check/src/: composition.rs  lib.rs  machine.rs
machine-check/src/composition/: composition_machine.rs  composition_swarm.rs  composition_types.rs
machine-check/tests/: proptests.proptest-regressions  subscription_size_experiments.rs
(+212 files in other folders)
